--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,10 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "primevue": "^4.3.7",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
+    "tailwindcss-primeui": "^0.6.1",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
