--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "chart.js": "^4.5.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.7",
     "tailwind-merge": "^3.3.1",
