--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "tailwindcss": "^4.1.11",
     "tailwindcss-primeui": "^0.6.1",
     "vue": "^3.5.18",
+    "vue-query": "^1.26.0",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
