--- a/backend/compose.prod.yaml
+++ b/backend/compose.prod.yaml
@@ -43,11 +43,13 @@ services:
       - "80:80"
       - "443:443"
     volumes:
+      - caddy:/data/
       - ./data/caddy/Caddyfile:/etc/caddy/Caddyfile
       - ./data/caddy/www:/data/www
 
 volumes:
   pg_data:
+  caddy:
 
 networks:
   webnet:
